--- a/papers/PC_Data.bib
+++ b/papers/PC_Data.bib
@@ -230,3 +230,16 @@
   Timestamp                = {2015.04.08}
 }
 
+@InProceedings{wegenkittl1997visualizing,
+  Title                    = {Visualizing the behaviour of higher dimensional dynamical systems},
+  Author                   = {Wegenkittl, Rainer and Loffelmann, Helwig and Groller, Eduard},
+  Booktitle                = {Visualization'97., Proceedings},
+  Year                     = {1997},
+  Organization             = {IEEE},
+  Pages                    = {119--125},
+
+  File                     = {:Visualizing the Behavior of Higher Dimensional Dynamical Systems.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.05.03}
+}
+
