A little update. --ChufanLai

--- a/papers/PC_Data.bib
+++ b/papers/PC_Data.bib
@@ -263,6 +263,22 @@
   Timestamp                = {2015.05.06}
 }
 
+@Article{rosario2004mapping,
+  Title                    = {Mapping nominal values to numbers for effective visualization},
+  Author                   = {Rosario, Geraldine E and Rundensteiner, Elke A and Brown, David C and Ward, Matthew O and Huang, Shiping},
+  Journal                  = {Information Visualization},
+  Year                     = {2004},
+  Number                   = {2},
+  Pages                    = {80--95},
+  Volume                   = {3},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Mapping Nominal Values to Numbers for Effective Visualization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {SAGE Publications},
+  Timestamp                = {2015.04.26}
+}
+
 @InProceedings{rosenbaum2012progressive,
   Title                    = {Progressive parallel coordinates},
   Author                   = {Rosenbaum, Ren{\'e} and Zhi, Jian and Hamann, Bernd},
