--- a/survey/parallelcoordinates.bib
+++ b/survey/parallelcoordinates.bib
@@ -960,6 +960,22 @@
   Timestamp                = {2015.04.09}
 }
 
+@Article{pang1997approaches,
+  Title                    = {Approaches to uncertainty visualization},
+  Author                   = {Pang, Alex T and Wittenbrink, Craig M and Lodha, Suresh K},
+  Journal                  = {The Visual Computer},
+  Year                     = {1997},
+  Number                   = {8},
+  Pages                    = {370--390},
+  Volume                   = {13},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Approaches to uncertainty visualization.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {Springer},
+  Timestamp                = {2015.05.06}
+}
+
 @InProceedings{peng2004clutter,
   Title                    = {Clutter reduction in multi-dimensional data visualization using dimension reordering},
   Author                   = {Peng, Wei and Ward, Matthew O and Rundensteiner, Elke A},
@@ -1301,7 +1317,8 @@ elberg2009parallel\;siirtola2006interacting\;siirtola2009visual\;van20
 2008extensions\;collins2009parallel\;dasgupta2011adaptive\;dasgupta201
 2conceptualizing\;feng2010matching\;heinrich2009continuous\;heinrich20
 11progressive\;hofmann2013common\;johansson2007depth\;kosara2006parall
-el\;lehmann2011features\;rosenbaum2012progressive\;;
+el\;lehmann2011features\;rosario2004mapping\;rosenbaum2012progressive\
+;;
 1 ExplicitGroup:Application\;0\;berger2011uncertainty\;caat2007design\
 ;gratzl2013lineup\;guo2011multi\;guo2011tripvista\;qu2007visual\;tory2
 005parallel\;;
@@ -1320,6 +1337,6 @@ ng\;;
 1 ExplicitGroup:Interaction\;0\;fua1999navigating\;fua2000structure\;h
 auser2002angular\;martin1995high\;;
 1 ExplicitGroup:LineImprovement\;0\;graham2003using\;moustafa2002some\
-;rosario2004mapping\;yuan2009scattering\;zhou2014parallel\;;
+;yuan2009scattering\;zhou2014parallel\;;
 }
 
