Nothing changed --ChufanLai

--- a/papers/PC_AxesOrdering.bib
+++ b/papers/PC_AxesOrdering.bib
@@ -72,7 +72,7 @@
   Timestamp                = {2015.04.24}
 }
 
-@InProceedings{peng2004clutter,
+@InProceedings{Peng2004,
   Title                    = {Clutter reduction in multi-dimensional data visualization using dimension reordering},
   Author                   = {Peng, Wei and Ward, Matthew O and Rundensteiner, Elke A},
   Booktitle                = {Information Visualization, 2004. INFOVIS 2004. IEEE Symposium on},
